--- a/src/components/components/Home.css
+++ b/src/components/components/Home.css
@@ -1,17 +1,18 @@
 .Home_screen {
-    background-image: url("/images/evgeni-tcherkasski-ZiJ9QGRCVEg-unsplash.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    position: relative;
-  }
-   .overlay {
-    background-color: black;
-    background-size: cover;
-    height: 100vh;
-    width: 100vw;
-    opacity: 0.6;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-  } 
+  background-image: url("/images/2750359.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  position: absolute;
+}
+/* .overlay {
+  background-color: black;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  opacity: 0.6;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+ */
